feat(tenantTime): wave 12 — entity-listener seam + 280-site migration
Introduces the `@TenantTimestamp` + `TimeAuditingEntityListener` seam that
closes JPA lifecycle-stamping sites on entities at `@PrePersist` /
`@PreUpdate`, and rolls the service-layer `TenantTimeService` pattern
across the largest remaining hotspots from the unzoned-now audit.

Why
- Audit baseline (2026-05-14): 533 zero-arg `LocalDate(Time).now()` sites
  across `backend/src/main/java`. Drifts the moment a tenant lives outside
  the JVM zone. See `docs/audit/p1-progress-2026-05-14.md`.

Closed in this wave (net −280 sites, −52.5%)
- 331 → 177 `LocalDateTime.now()`
- 202 → 76  `LocalDate.now()`
- Remaining 253 are predicate/business-event sites already flagged for
  service-layer migration in the next batch — see follow-up TODOs.

Seam (new)
- `common/util/TenantTimestamp.java` — field annotation marking lifecycle-
  managed timestamps; supports `updateOnChange=true` for `@PreUpdate`.
- `common/util/TimeAuditingEntityListener.java` — Spring-managed JPA
  listener with static-setter injection, reflection cache per entity
  class, eager validation of unsupported field types.
- `common/util/TenantTimezoneInvalidateSubscriber.java` — Redis pub/sub
  hook to invalidate tenant zone cache on policy change (companion to
  existing `TenantTimeService`).
- 25 entities now wire `@EntityListeners(TimeAuditingEntityListener.class)`
  with 26 `@TenantTimestamp` fields total.

Service / controller / event-listener migrations (this wave)
- Analytics: `PredictiveAnalyticsService` (11), `AnalyticsService` (7),
  `ExecutiveDashboardService` (4)
- Reports: `ReportGenerationService` (11)
- Resource: `ResourceManagementService` (6)
- Employee: `EmployeeImportValidationService` (2),
  `EmployeeImportService` (2), `EmploymentChangeRequestService` (2),
  `SkillService` (1)
- LMS: `CourseEnrollmentService` (3), `QuizAssessmentService` (6)
- Engagement: `PulseSurveyService` (7), `OneOnOneMeetingService` (6)
- E-signature: `